# torchstain

./: .gitignore  LICENSE  README.md  compare.py  example.py  pyproject.toml  readthedocs.yml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  test.yml  tests.yml  tests_full.yml  tests_quick.yml
apps/: example_aug.py  example_norm.py
docs/: README.md  api.rst  conf.py  index.rst  requirements.txt
docs/examples/: stain_normalization.rst
docs/templates/: module.rst
tests/: test_color_conv.py  test_jax.py  test_normalization.py  test_normalizers.py  test_tf.py  test_tf_norm_only.py  test_tf_normalizer.py  test_torch.py  test_torch_norm_only.py  test_torch_normalizer.py  test_utils.py
torchstain/: __init__.py
torchstain/base/: __init__.py
torchstain/base/augmentors/: __init__.py  he_augmentor.py  macenko.py
torchstain/base/normalizers/: __init__.py  he_normalizer.py  macenko.py  macenko_normalizer.py  multitarget.py  numpy_macenko_normalizer.py  reinhard.py  vahadane.py
torchstain/core/: __init__.py
torchstain/core/normalizers/: macenko_normalizer.py
torchstain/jax/: __init__.py
torchstain/jax/normalizers/: __init__.py  (+1 more)
torchstain/normalizers/: __init__.py  macenko_normalizer.py  numpy_macenko_normalizer.py  tensorflow_macenko_normalizer.py  torch_macenko_normalizer.py
torchstain/numpy/: __init__.py
torchstain/tf/: __init__.py
torchstain/tf_backend/: __init__.py
torchstain/torch/: __init__.py
torchstain/torch_backend/: __init__.py
torchstain/utils/: __init__.py  cov.py  percentile.py  solveLS.py
(+59 files in other folders)
